# rwse-experiments

./: .gitignore  Dockerfile  README.md  exp.py  exp2.py  pyproject.toml
data/: TypeSystem.xml  confusion_sets.csv
experiments/: analyze_dataset_semantic_de.ipynb  analyze_dataset_semantic_en.ipynb  analyze_educational.ipynb  analyze_news.ipynb  analyze_news_balanced.ipynb  analyze_wiki_de.ipynb  analyze_wiki_en.ipynb  classification_results.ipynb  data_preparation.ipynb  demo.py  example_unkown_words.ipynb  false_positives.ipynb  false_positives_balanced.ipynb  false_positives_filtered.ipynb  figure.ipynb  helper.py  magnitude_search.ipynb  run_magnitude_search.py  true_positives.ipynb  true_positives_balanced.ipynb  true_positives_filtered.ipynb  use_case_bawe.ipynb  use_case_fce.ipynb  use_case_rwse.ipynb  util.py  word_statistics.ipynb
experiments/data/: false_positives.csv  report_false_positives.csv  report_true_positives_missed.csv  true_positives.csv  true_positives_missed.csv
experiments/input/: cleaned_dataset_semantic_de.csv  cleaned_dataset_semantic_de.csv-bad_indices  cleaned_dataset_semantic_de.csv-bad_words  cleaned_dataset_semantic_en.csv  cleaned_dataset_semantic_en.csv-bad_words  confusion_sets_modified.csv  dataset_semantic_de.txt  dataset_semantic_en_simple.txt  eng_news_2023-balanced-sentences.csv  eng_news_2023_10K-masked-sentences.csv  eng_news_2023_10K-sentences.txt_transformed  eng_news_2023_balanced-masked-sentences.csv  eng_news_2023_balanced-sentences.csv  fce-public.train.original.tsv  fce_cleaned.txt  modified_dataset_semantic_de.csv  modified_dataset_semantic_en.csv  (+2 more)
rwse/: __init__.py  helper.py  rwse.py
tests/: test_helper.py  test_rwse.py  test_util.py
(+35 files in other folders)
