[tool.poetry]
name = "rwse-experiments"
version = "0.1.0"
description = ""
authors = ["dmnc-grdnr <dmnc.crl.grdnr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
transformers = "4.48.1"
dkpro-cassis = "0.9.1"
torch = "2.4.1"
spacy = "3.8.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}
pytest = "8.3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
