[tool.poetry]
name = "rwse-experiments"
version = "0.1.0"
description = ""
authors = ["dmnc-grdnr <dmnc.crl.grdnr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
transformers = "4.48.1"
dkpro-cassis = "0.9.1"
torch = "2.4.1"
spacy = "3.8.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}
streamlit = "1.39.0"
watchdog = "5.0.3"
rwse-checker = "0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
scikit-learn = "1.6.1"
de-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl"}
string2string = "^0.0.150"
cas-visualizer = "^0.0.9"
openpyxl = "^3.1.5"
websocket-client = "1.8.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
